--- a/src/Components/sign_in_page/sign_in.css
+++ b/src/Components/sign_in_page/sign_in.css
@@ -1,194 +1,239 @@
 @keyframes start_bg_sing_in {
-    from {
-        right: 0%;
-        border-radius: 0%;
-    }
-    to {}
+  from {
+    right: 0%;
+    border-radius: 0%;
+  }
+  to {
+  }
 }
 
 @keyframes start_sign_up_div {
-    from {
-        right: 150%;
-    }
+  from {
+    right: 150%;
+  }
 }
 
 @keyframes start_form_sing_in {
-    from {
-        right: -50%;
-    }
+  from {
+    right: -50%;
+  }
 }
 
 @keyframes startImg {
-    from {
-        top: 100%;
-    }
+  from {
+    top: 100%;
+  }
 }
 
 .sign_in_page .container {
-    position: fixed;
-    height: 1500px;
-    width: 2000px;
-    background-image: linear-gradient(45deg, #0092E0 0%, #04befe 100%);
-    background-repeat: no-repeat;
-    border-radius: 50%;
-    top: -106.8%;
-    right: -75%;
-    animation: start_bg_sing_in 1s;
+  position: fixed;
+  z-index: -100;
+  height: 1500px;
+  width: 2000px;
+  background-image: linear-gradient(45deg, #0092e0 0%, #04befe 100%);
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  top: -106.8%;
+  right: -75%;
+  animation: start_bg_sing_in 1s;
 }
 
 .sign_in_page .inputForm {
-    padding: 50px 0;
-    position: fixed;
-    height: 70%;
-    width: 30%;
-    right: 60%;
-    bottom: 0%;
-    top: 0;
-    margin: auto;
-    border: 2px dotted #d62828;
-    border-radius: 25px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-    animation: start_form_sing_in 1s;
+  padding: 50px 0px;
+  position: fixed;
+  height: 70%;
+  width: 30%;
+  right: 60%;
+  bottom: 0%;
+  top: 0;
+  margin: auto;
+  border: 2px dotted #d62828;
+  border-radius: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  animation: start_form_sing_in 1s;
 }
 
 .sign_in_page .Image {
-    height: 400px;
-    position: fixed;
-    top: 34%;
-    right: 57%;
-    animation: startImg 1s;
+  height: 400px;
+  position: fixed;
+  top: 34%;
+  right: 57%;
+  animation: startImg 1s;
 }
 
 .sign_in_page .Image img {
-    position: fixed;
-    height: 450px;
+  position: fixed;
+  height: 450px;
 }
 
 .sign_in_page .gif {
-    opacity: 0;
-    z-index: 2;
+  opacity: 0;
+  z-index: 2;
 }
 
 .sign_in_page .title {
-    font-size: 40px;
-    font-weight: 900;
+  font-size: 40px;
+  font-weight: 900;
+}
+
+.sign_in_page .inputForm .inputFields {
+  width: 80%;
+  color: black;
 }
 
 .sign_in_page .inputForm input {
-    width: 22rem;
-    height: 2.5rem;
-    border-radius: 25px;
-    font-size: 1.5rem;
-    padding-left: 34px;
-    border: 2px solid #acacac;
-    color: black;
+  height: 2.5rem;
+  width: 100%;
+  border-radius: 25px;
+  font-size: 1.5rem;
+  padding-left: 34px;
+  border: 2px solid #acacac;
+  color: black;
 }
 
 .sign_in_page .inputForm i {
-    position: fixed;
-    margin-top: 10px;
-    margin-left: 1rem;
-    color: #acacac;
+  position: fixed;
+  margin-top: 10px;
+  margin-left: 1rem;
+  color: #acacac;
 }
 
 .sign_in_page .inputForm button {
-    width: 11rem;
-    height: 2.2rem;
-    border-radius: 25px;
-    background-color: #0092E0;
-    font-size: 1.6rem;
-    border: none;
-    color: white;
+  width: 11rem;
+  height: 2.2rem;
+  border-radius: 25px;
+  background-color: #0092e0;
+  font-size: 1.6rem;
+  border: none;
+  color: white;
 }
 
 .sign_in_page .socialIcons {
-    width: 230px;
-    height: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+  width: 230px;
+  height: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .sign_in_page .socialIcons div {
-    border: 2px solid #acacac;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 25px;
+  border: 2px solid #acacac;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 25px;
 }
 
 .sign_in_page .socialIcons div i {
-    margin: 0;
-    color: #acacac;
+  margin: 0;
+  color: #acacac;
 }
 
 .sign_in_page .signUpWith {
-    text-decoration: underline;
-    font-size: 20px;
+  text-decoration: underline;
+  font-size: 20px;
 }
 
 .sign_in_page .or_sign_up {
-    position: fixed;
-    color: white;
-    top: 10%;
-    right: 10%;
-    text-align: center;
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    height: 150px;
-    animation: start_sign_up_div 1s;
+  position: fixed;
+  color: white;
+  top: 10%;
+  right: 10%;
+  text-align: center;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 150px;
+  animation: start_sign_up_div 1s;
 }
 
 .sign_in_page .or_sign_up button {
-    width: 11rem;
-    height: 2.2rem;
-    border-radius: 25px;
-    background-color: white;
-    font-size: 1.6rem;
-    border: 2px solid white;
-    color: #0092E0;
-    text-decoration: none;
+  width: 11rem;
+  height: 2.2rem;
+  border-radius: 25px;
+  background-color: white;
+  font-size: 1.6rem;
+  border: 2px solid white;
+  color: #0092e0;
+  text-decoration: none;
 }
 
 /* on hover */
 
 .sign_in_page .inputForm button:hover {
-    color: black;
-    border: 2px solid black;
+  color: black;
+  border: 2px solid black;
 }
 
 .sign_in_page .or_sign_up button:hover {
-    border: 2px solid black;
-    color: black;
+  border: 2px solid black;
+  color: black;
 }
 
 .sign_in_page .socialIcons div:hover {
-    border-color: black;
+  border-color: black;
 }
 
 .socialIcons div:hover i {
-    color: black;
+  color: black;
 }
 
 .sign_in_page .Image:hover .gif {
-    opacity: 1;
+  opacity: 1;
 }
 
 .sign_in_page .Image:hover .staticImg {
-    opacity: 0;
+  opacity: 0;
 }
 
+.loading_gif {
+  height: 35px;
+  width: 35px;
+}
 
-.loading_gif{
-    height: 35px;
-    width: 35px;
+@media all and (max-width: 1200px) {
+  .sign_in_page .inputForm {
+    padding: 50px 0;
+    position: static;
+    background: #ffffff;
+    width: min(90%, 30rem);
+    height: 30rem;
+    margin: 0;
+  }
+  .sign_in_page .title {
+    font-size: 30px;
+  }
+  .sign_in_page {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
+  }
+
+  .sign_in_page .or_sign_up {
+    color: black;
+    position: static;
+  }
+  .sign_in_page .or_sign_up button {
+    background-color: #0092e0;
+  }
+  .sign_in_page .container {
+    height: 1000px;
+    width: 2000px;
+    background-image: linear-gradient(45deg, #0092e0 0%, #04befe 100%);
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    top: -70%;
+    right: -75%;
+    animation: start_bg_sing_in 1s;
+  }
 }
